--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
-    <img #logo src="/assets/logotipo.png" alt="Logo" class="logo">
-  </header>
-  
+    <app-logo></app-logo>
+    <app-busca></app-busca>
+    <app-navlinks> </app-navlinks>
+</header>
