--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header>
-  Sonic
-</app-header>
-
-<app-sonic-bounce></app-sonic-bounce>
+<section>
+  <app-header></app-header>
+  <app-content></app-content>
+  <app-footer></app-footer>
+</section >
